# statement-chat

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: Analytics.svelte  Budget.svelte  CategoryChart.svelte  Chat.svelte  ChatMessage.svelte  Dashboard.svelte  PieChart.svelte  Transactions.svelte
frontend/src/lib/: api.js  websocket.js
src/: __init__.py  chat.py  classifier.py  config.py  database.py  llm_backend.py  main.py  watcher.py
src/api/: app.py  models.py
src/api/routers/: analytics.py  budgets.py  chat.py  transactions.py
src/parsers/: __init__.py  base.py  fnb.py
tests/: test_api.py  test_chat.py  test_chat_queries.py  test_classifier.py  test_config.py  test_database.py  test_fnb_parser.py  test_llm_backend.py  test_main.py  test_watcher.py
