[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statement-chat"
version = "0.1.0"
description = "Bank Statement Chat Bot - Parse and query your bank statements with AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "watchdog>=3.0.0",
    "ollama>=0.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
statement-chat = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
