[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bankbot"
version = "0.1.0"
description = "BankBot - Parse and query your bank statements with a local AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "watchdog>=3.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
mlx = [
    "mlx-lm>=0.30.5",
]

[project.scripts]
bankbot = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swig.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "raise NotImplementedError",
    "pass$",
]
exclude_also = [
    # Abstract methods
    "def parse\\(self.*\\) -> StatementData:",
    "def bank_name\\(cls\\) -> str:",
]
